Resolved deprecations due to switch to Java 21